# cmake_template

./: CMakeLists.txt  Doxyfile  README.md
.github/: pull_request_template.md
.github/issue_templates/: bug_report.md
.github/workflows/: macos.yml  ubuntu.yml
docs/: dir_000001_000002.html  dir_0a40458ba652aaa121bab68652487793.html  dir_0a40458ba652aaa121bab68652487793_dep.dot  dir_3e63559d156338b3f05a84cbbd76cff5.html  dir_a5745aafa10c802b8ba34451abcd9074.html  dir_a5745aafa10c802b8ba34451abcd9074_dep.dot  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  return__zero_8cpp.html  return__zero_8cpp__incl.dot  return__zero_8hpp.html  return__zero_8hpp__dep__incl.dot  return__zero_8hpp_source.html
docs/search/: all_1.js  files_1.js  functions_1.js  searchdata.js
modules/: CMakeLists.txt
template_lib/: CMakeLists.txt
template_lib/include/: return_zero.hpp
template_lib/src/: return_zero.cpp
tests/: CMakeLists.txt
tests/include/: return_zero.hpp
tests/src/: main.cpp
